--- a/src/ocaml-output/Makefile
+++ b/src/ocaml-output/Makefile
@@ -7,7 +7,7 @@ endif
 
 MENHIR=menhir #--explain --infer -la 1 --table
 OCAMLLEX=ocamllex
-OCAMLBUILD=cd ../../ && ocamlbuild -cflag '-g' -I src/ocaml-output -I src/basic/ml \
+OCAMLBUILD=cd ../../ && ocamlbuild -tag debug -cflag '-g' -I src/ocaml-output -I src/basic/ml \
   -I src/parser/ml -I src/fstar/ml -I src/extraction/ml -j 24 -build-dir src/ocaml-output/_build \
   -I src/prettyprint/ml -I src/ocaml-output/bootlibs -use-ocamlfind
 COMPILER_ML_LIB=FStar_Util.cmx FStar_Bytes.cmx FStar_Getopt.cmx FStar_Range.cmx FStar_Platform.cmx FStar_Unionfind.cmx
@@ -99,9 +99,9 @@ endif
 	                    >> $@
 
 fstar.exe: $(GENERATED_FILES)
-	$(OCAMLBUILD) main.native
-	cp _build/src/fstar/ml/main.native ../../bin/$@
-	cp _build/src/fstar/ml/main.native ../../bin/fstar.ocaml
+	$(OCAMLBUILD) main.byte
+	cp _build/src/fstar/ml/main.byte ../../bin/$@
+	cp _build/src/fstar/ml/main.byte ../../bin/fstar.ocaml
 
 FStar_Parser_Parse.ml: parse.mly
 	# We are opening the same module twice but we need these modules
