Added make targets and support for Azure Batch verification

--- a/src/Makefile
+++ b/src/Makefile
@@ -69,6 +69,7 @@ clean: nuget-restore
 # --------------------------------------------------------------------
 
 nuget-restore:
+	# $(MAKE) -C VS update-nuget
 	$(RUNTIME) VS/.nuget/NuGet.exe restore VS/FStar.sln
 
 nuget-clean:
