Added Azure Batch support code for the cloud builds

--- a/src/Makefile
+++ b/src/Makefile
@@ -294,5 +294,5 @@ include $(FSTAR_HOME)/src/gmake/fstar.mk
 uregressions-cver: $(CVERCONFIG)
 	+make -C ../ulib all-cver
 	+make -C ../examples all-cver
-	$(CVEREXE) await -i $(CVERCONFIG) 
+	$(CVEREXE) await -i $(CVERCONFIG) -ns
 	rm $(CVERCONFIG)
