Batch build cleanup

--- a/src/Makefile
+++ b/src/Makefile
@@ -60,6 +60,7 @@ all: nuget-restore
 	$(DOS2UNIX) parser/parse.fsi
 	chmod a+x $(BIN)/tests.exe
 	chmod a+x $(BIN)/fstar.exe
+	chmod a+x $(BIN)/fabc-make.exe
 
 # SAD! Can't make clean if fslex and fsyacc haven't be restored... what...
 clean: nuget-restore
