Replace Syntax.Print.term_to_string with resugar_term and AST.term_to_string

--- a/src/smtencoding/smtencoding.fsproj
+++ b/src/smtencoding/smtencoding.fsproj
@@ -58,6 +58,12 @@
       <Project>{e8957dbd-58e7-4cf8-9192-e0a9cfb3867e}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <!-- don't need parser.fsproj once we link Syntax.Print.term_to_string to prettyprint -->
+    <ProjectReference Include="..\parser\parser.fsproj">
+      <Name>parser</Name>
+      <Project>{9974a6de-6ca8-44b6-a52e-51fc52932179}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\syntax\syntax.fsproj">
       <Name>syntax</Name>
       <Project>{d008f256-80aa-4f9c-9c10-dc743d772940}</Project>
