--- a/src/extraction/extraction.fsproj
+++ b/src/extraction/extraction.fsproj
@@ -62,6 +62,12 @@
     <Compile Include="FStar.Extraction.Kremlin.fs" />
   </ItemGroup>
   <ItemGroup>
+    <!-- don't need parser.fsproj once we link Syntax.Print.term_to_string to prettyprint -->
+    <ProjectReference Include="..\parser\parser.fsproj">
+      <Name>parser</Name>
+      <Project>{9974a6de-6ca8-44b6-a52e-51fc52932179}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\typechecker\typechecker.fsproj">
       <Name>typechecker</Name>
       <Project>{21685793-ac84-4ec1-9eab-39f9c0252f3f}</Project>
