--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ cache/
 /src/parser/parse.ml
 /src/parser/parse.mli
 src/ocaml-output/
+src/u_ocaml-output/
+src/u_boot_fsts/
 
 /src/boot_fstis
 /src/boot_fsts
