--- a/src/ocaml-output/Makefile
+++ b/src/ocaml-output/Makefile
@@ -123,7 +123,12 @@ FStar_Parser_Parse.ml: parse.mly
 	# TODO: create a proper OCamlbuild rule for this production so that
 	# OCamlbuild knows how to generate parse.mly first (possibly using
 	# menhir) and removes the production as needed.
-	ocamlyacc parse.mly
+	ocamlyacc parse.mly 2> yac-log
+	cat yac-log
+	@
+	@if (( $$(grep "shift/reduce" yac-log | sed 's/^\([0-9]\+\).*/\1/') > 7 )); then \
+	  echo "shift-reduce conflicts have increased; please fix" && exit 255; \
+	  fi
 	cat parse.ml >> $@
 	rm parse.ml parse.mli
 
