--- a/src/extraction/extraction.fsproj
+++ b/src/extraction/extraction.fsproj
@@ -122,6 +122,11 @@
       <Project>{54bc6905-03ee-4aeb-b726-742b6d4fa710}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\prettyprint\prettyprint.fsproj">
+      <Name>prettyprint</Name>
+      <Project>{7de787b9-e5a4-4288-8e5a-f887c08f8d82}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\syntax\syntax.fsproj">
       <Name>syntax</Name>
       <Project>{d008f256-80aa-4f9c-9c10-dc743d772940}</Project>
