--- a/src/tactics/tactics.fsproj
+++ b/src/tactics/tactics.fsproj
@@ -58,6 +58,11 @@
       <Project>{9974a6de-6ca8-44b6-a52e-51fc52932179}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\prettyprint\prettyprint.fsproj">
+      <Name>prettyprint</Name>
+      <Project>{7de787b9-e5a4-4288-8e5a-f887c08f8d82}</Project>
+      <Private>True</Private>
+    </ProjectReference>
     <ProjectReference Include="..\smtencoding\smtencoding.fsproj">
       <Name>smtencoding</Name>
       <Project>{f6879027-a97f-4857-8f52-cc5641455652}</Project>
