***NO_CI*** rel seems to go through

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -11,19 +11,21 @@ termination \
 software_foundations \
 ../doc/tutorial/code/exercises \
 ../doc/tutorial/code/solutions \
-rel \
-maths \
-paradoxes \
-printf \
-metatheory \
-verifythis \
-preorders \
-dm4free \
-incl \
-struct \
-micro-benchmarks \
-bytes \
-tactics
+rel
+
+# maths \
+# paradoxes \
+# printf \
+# metatheory \
+# verifythis \
+# preorders \
+# dm4free \
+# incl \
+# struct \
+# micro-benchmarks \
+# bytes \
+# tactics
+
 # low-level \  ... NS: removing from CI for this branch
 
 # WARNING: this target shouldn't depend on anything other than the F*
