--- a/src/Makefile
+++ b/src/Makefile
@@ -296,5 +296,5 @@ include $(FSTAR_HOME)/src/gmake/fstar.mk
 uregressions-cver: $(CVERCONFIG)
 	+make -C ../ulib all-cver
 	+make -C ../examples all-cver
-	$(CVEREXE) await -i $(CVERCONFIG) -ns
+	# $(CVEREXE) await -i $(CVERCONFIG) -ns
 	rm $(CVERCONFIG)
