running a regression build with hint_info for stats

--- a/src/Makefile
+++ b/src/Makefile
@@ -249,6 +249,7 @@ boot-ocaml:
 # --------------------------------------------------------------------
 # Testing
 # --------------------------------------------------------------------
+OTHERFLAGS+=--hint_info
 
 utest:
 	make all
