Fixed Azure infrastracture scripts

--- a/doc/tutorial/code/solutions/Makefile
+++ b/doc/tutorial/code/solutions/Makefile
@@ -65,8 +65,8 @@ Ex01a-ocaml: out Ex01a.fst
 #  	--verify_module $(basename $(notdir $@))
 
 CFSTAR=$(subst CURRENT_DIR,doc/tutorial/code/solutions,$(CVERFSTAR))
-cverify-%: __force__
+cverify-%: __force__ CVERCONFIG 
 	$(CFSTAR) --include $(FSTAR_HOME)/ucontrib/Platform/fst --include $(FSTAR_HOME)/ucontrib/CoreCrypto/fst $*
-cverify_hh-%: __force__
+cverify_hh-%: __force__ CVERCONFIG
 	$(CFSTAR) --include $(HYPERHEAP) $*
 all-cver: $(VERFILES:%=cverify-%) $(VERFILES_HH:%=cverify_hh-%)
