--- a/examples/hello/Makefile
+++ b/examples/hello/Makefile
@@ -46,8 +46,8 @@ FS_LIBS=$(BIN)/FSharp.PowerPack.dll
 
 fs: out hello.fst
 	$(FSTAR)   --odir out --codegen FSharp hello.fst
-	cp $(FS_LIBS) out
-	$(FSC) --nowarn:0086 -o out/hello.exe $(LIB)/fs/prims.fs $(LIB)/fs/io.fs out/Hello.fs
+	#cp $(FS_LIBS) out  #No longer needed and breaking Make 5/1/17
+	#$(FSC) --nowarn:0086 -o out/hello.exe $(LIB)/fs/prims.fs $(LIB)/fs/io.fs out/Hello.fs
 	$(FSRUNTIME) ./out/hello.exe
 
 # CH: this target is dead, there is no ml/native_int anywhere
