--- a/src/tactics/tactics.fsproj
+++ b/src/tactics/tactics.fsproj
@@ -78,6 +78,11 @@
       <Project>{21685793-ac84-4ec1-9eab-39f9c0252f3f}</Project>
       <Private>True</Private>
     </ProjectReference>
+    <ProjectReference Include="..\reflection\reflection.fsproj">
+      <Name>typechecker</Name>
+      <Project>{8869FA4E-96AF-4E01-99BC-B52C88610E3D}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FStar.Tactics.Basic.fs" />
