--- a/examples/Makefile.include
+++ b/examples/Makefile.include
@@ -15,5 +15,5 @@ endif
 %.uver: %.fst 
 	$(FSTAR) --verify_module $* $^
 
-%.ucver: %.fst
-	$(CFSTAR) --verify_module $* $^
+%.ucver: %.fst CVERCONFIG
+	$(CFSTAR) --verify_module $* $<
