--- a/src/typechecker/typechecker.fsproj
+++ b/src/typechecker/typechecker.fsproj
@@ -72,6 +72,7 @@
     <Compile Include="FStar.TypeChecker.Tc.fsi" />
     <Compile Include="FStar.TypeChecker.Tc.fs" />
     <Content Include="packages.config" />
+    <Compile Include="FStar.TypeChecker.KN.fs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FSharp.Compatibility.OCaml">
